fix: z-index

--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,6 @@ figcaption {
   background: #04aa6d;
 	width: 100%;
 	height: 20px;
-	position: fixed;
 }
 
 .progress-container {
@@ -91,7 +90,8 @@ figcaption {
 	width: 100%;
 	height: 20px;
 	background: #ccc;
-	position: fixed;
+	position: sticky;
+	z-index: 1;
 }
 
 @keyframes reveal {
